swagger docs for chartByCreationDate
