# storage/docs/api-docs.json
@@ -6479,15 +6479,35 @@
                     },
                     "example": [
                         "01.07.2019",
-                        "02.07.2019"
+                        "02.07.2019",
+                        ".......",
+                        "01.08.2019"
                     ]
                 },
                 "requests_per_day_ydata": {
                     "type": "array",
                     "items": {
-                        "type": "string",
-                        "format": "full-date"
-                    }
+                        "type": "object"
+                    },
+                    "example": [
+                        {
+                            "name": "unpublished",
+                            "data": [
+                                0,
+                                1,
+                                "..."
+                            ]
+                        },
+                        ".....",
+                        {
+                            "name": "published",
+                            "data": [
+                                0,
+                                1,
+                                "..."
+                            ]
+                        }
+                    ]
                 }
             }
         },
